--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -1,16 +1,91 @@
-**Requerimientos Funcionales:**
-1. **Registro e inicio de sesión con roles definidos:** La aplicación debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.
-2. **Perfiles de usuario:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.
-3. **Mensajería one-to-one:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.
-4. **Mensajería de grupo:** Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.
-5. **Gestión de cursos:** Los profesores podrán crear y gestionar cursos, agregar alumnos y personal administrativo, compartir materiales, etc.
-6. **Anuncios y notificaciones:** Los profesores y el personal administrativo podrán enviar anuncios y notificaciones importantes a los grupos de estudiantes o a toda la institución.
-7. **Calendario académico:** La aplicación debe incluir un calendario académico donde se muestren eventos importantes, fechas límite, horarios de clase, etc.
-8. **Compartir archivos:** Todos los usuarios podrán compartir archivos multimedia, documentos, presentaciones, etc., dentro de los chats individuales o de grupo.
-9. **Búsqueda de usuarios y cursos:** Los usuarios podrán buscar y encontrar a otros usuarios o cursos específicos dentro de la aplicación.
-10. **Integración con sistemas académicos:** La aplicación puede integrarse con los sistemas académicos de la institución para acceder a información de calificaciones, horarios, etc.
-11. **Privacidad y seguridad:** Los mensajes y archivos compartidos deben estar cifrados, y se deben implementar medidas de seguridad para proteger la privacidad de los usuarios.
-12. **Notificaciones push:** Los usuarios recibirán notificaciones push en tiempo real sobre nuevos mensajes, anuncios, eventos, etc.
-13. **Soporte multiplataforma:** La aplicación debe ser compatible con iOS y Android para una mejor accesibilidad.
+## Requerimientos Funcionales:
+
+### **UC1-Registro e inicio de sesión con roles definidos:**
+
+**Descripcion:** La aplicación debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
+**Actores:** Sistema y usuario  
+**Precondiciones:** - Una cuenta de usuario previamente registrada  
+**Postcondiciones:** Se registra e inicia sesión de un usuario dentro del sistema.  
+**Activador:** Un usuario decide registrarse en la aplicación.
+
+### **UC2-Perfiles de usuario:**
+
+**Descripcion:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
+**Actores:** Sistema y usuario.  
+**Precondiciones:** - Una cuenta de usuario previamente registrada. / Haber accedido a la aplicacion.
+**Postcondiciones:** Mostrar datos del usuario con la sesión iniciada.  
+**Activador:** Un usuario decide ingresar a su perfil.
+
+### **UC3-Mensajería one-to-one:**
+
+**Descripcion:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet  
+**Postcondiciones:** Envio de un mensaje directo al chat del otro usuario.  
+**Activador:** Un usuario quiere enviar un mensaje directo.
+
+### **UC4-Mensajería de grupo:**
+
+**Descripcion:** Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet. / Pertenecer a un curso.  
+**Postcondiciones:** Los grupos de chat son creados y se realizan envio de mensajes.  
+**Activador:** Un usuario desea crear y enviar mensajes a un chat grupal.
+
+### **UC5-Gestión de cursos:**
+
+**Descripcion:** Los profesores podrán crear y gestionar cursos, agregar alumnos y personal administrativo, compartir materiales, etc.  
+**Actores:** Sistema y profesores.  
+**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet. / Iniciar sesion como profesor.  
+**Postcondiciones:** El curso es creado y queda disponible para que los alumnos se inscriban.  
+**Activador:** El profesor decide crear o gestionar un curso.
+
+### **UC6-Anuncios y notificaciones:**
+
+**Descripcion:** Los profesores y el personal administrativo podrán enviar anuncios y notificaciones importantes a los grupos de estudiantes o a toda la institución.  
+**Actores:** Sistema, profesores y personal administrativo.  
+**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet. / Iniciar sesion como profesor o personal administrativo.  
+**Postcondiciones:** Los anuncios y notificaciones son enviados y recibidos por los estudiantes.  
+**Activador:** El profesor o personal administrativo decide enviar un anuncio o notificación.
+
+### **UC7-Calendario académico:**
+
+**Descripcion:** La aplicación debe incluir un calendario académico donde se muestren eventos importantes, fechas límite, horarios de clase, etc.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet.  
+**Postcondiciones:** El calendario académico se actualiza y está visible para todos los usuarios.  
+**Activador:** Un usuario decide agregar o consultar un evento en el calendario académico.
+
+### **UC8-Compartir archivos:**
+
+**Descripcion:** Todos los usuarios podrán compartir archivos multimedia, documentos, presentaciones, etc., dentro de los chats individuales o de grupo.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet.  
+**Postcondiciones:** Los archivos compartidos están disponibles para todos los participantes del chat.  
+**Activador:** Un usuario decide compartir un archivo dentro de un chat individual o de grupo.
+
+### **UC9-Búsqueda de usuarios y cursos:**
+
+**Descripcion:** Los usuarios podrán buscar y encontrar a otros usuarios o cursos específicos dentro de la aplicación.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet.  
+**Postcondiciones:** Los usuarios pueden ver los resultados de búsqueda y acceder a los perfiles de usuarios o detalles de cursos.
+**Activador:** Un usuario decide buscar a otro usuario o un curso.
+
+### **UC10-Integración con sistemas académicos:**
+
+**Descripcion:** La aplicación puede integrarse con los sistemas académicos de la institución para acceder a información de calificaciones, horarios, etc.  
+**Actores:** Sistema y usuarios.
+**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet. / Integracion configurada con los sistemas externos.  
+**Postcondiciones:** Los usuarios pueden acceder a información académica actualizada dentro de la aplicación. / Los datos de los sistemas son sincronizados.
+**Activador:** Un usuario decide consultar información académica (calificaciones, horarios, etc.) a través de la aplicación.
+
+### **UC11-Notificaciones push:**
+
+**Descripcion:** Los usuarios recibirán notificaciones push en tiempo real sobre nuevos mensajes, anuncios, eventos, etc.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet.  
+**Postcondiciones:** Los usuarios reciben notificaciones push en tiempo real.  
+**Activador:** Se produce un evento importante en tiempo real dentro de la aplicacion.
 
 [Regresar al índice](../../README.md)
