--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -2,9 +2,9 @@
 
 ### **UC1-Registro e inicio de sesión con roles definidos:**
 
-![UC1-Register1](PNGs/Prototipos/Caso%201%20Register%20Page%201.png)
-![UC1-Register2](PNGs/Prototipos/Caso%201%20Register%20Page%202.png)
-![UC1-Login](PNGs/Prototipos/Caso%201%20Log%20in%20Page.png)
+![UC1-Register1](PNGs/Prototipos/Caso_1_Register_Page_1.png)
+![UC1-Register2](PNGs/Prototipos/Caso_1_Register_Page_2.png)
+![UC1-Login](PNGs/Prototipos/Caso_1_Log_in_Page.png)
 
 **Descripcion:** La aplicación debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
 **Actores:** Sistema y usuario  
@@ -14,7 +14,7 @@
 
 ### **UC2-Perfiles de usuario:**
 
-![UC2-Perfil](PNGs/Prototipos/Caso%202%20Perfil%20Page.png)
+![UC2-Perfil](PNGs/Prototipos/Caso_2_Perfil_Page.png)
 
 **Descripcion:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
 **Actores:** Sistema y usuario.  
@@ -24,7 +24,7 @@
 
 ### **UC3-Mensajería one-to-one:**
 
-![UC3-Message](PNGs/Prototipos/Caso%203%20Message%20Page.png)
+![UC3-Message](PNGs/Prototipos/Caso_3_Message_Page.png)
 
 **Descripcion:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
 **Actores:** Sistema y usuarios.  
