--- a/Partes del Indice/1. Caso de Negocio/1.1 Generalidad.md
+++ b/Partes del Indice/1. Caso de Negocio/1.1 Generalidad.md
@@ -1,4 +1,26 @@
 ## 1.1 Generalidades
-Como idea de proyecto, se tiene el desarrollo de un aplicativo web y móvil que permita el servicio de mensajería instantánea y masiva entre estudiantes, profesores y personal administrativos de una/varias universidades. En el aplicativo se podrán de crear grupos, enviar mensajes, enviar diferentes tipos de archivos multimedia, realizar llamadas, tenes gestión de administrador, etc. Todo esto con la finalidad de poder gestionar de forma apropiada las comunicaciones en el entorno académico.
+**Nombre del startup:**  
+ClassTalk
+
+**Situación del startup:** 
+ClassTalk es una startup en fase de desarrollo, enfocada en mejorar la comunicación en el entorno académico universitario mediante una aplicación web innovadora. La idea surgió de la necesidad de una herramienta eficaz y específica para la comunicación instantánea y masiva entre estudiantes, profesores y personal administrativo. Actualmente, se encuentran en la etapa de diseño y prototipado del aplicativo, con planes de lanzar una versión beta para pruebas en una universidad piloto en los próximos seis meses.
+
+**Estructura de la Solución**
+1. **Plataforma Web**
+   - **Frontend:** Interfaz amigable y accesible diseñada para ser intuitiva tanto para estudiantes como para profesores y personal administrativo.
+   - **Backend:** Infraestructura robusta que garantice la seguridad y rapidez en el procesamiento de datos y comunicaciones.
+   - **Seguridad:** Implementación de protocolos de seguridad para proteger la información y garantizar la privacidad de los usuarios.
+
+2. **Funcionalidades Principales**
+   - **Mensajería Instantánea:** Permite el envío de mensajes de texto, imágenes, videos y otros tipos de archivos multimedia.
+   - **Grupos:** Creación y gestión de grupos de comunicación según materias, departamentos, proyectos, etc.
+   - **Llamadas y Videollamadas:** Funcionalidad integrada para realizar llamadas de voz y video, facilitando reuniones virtuales.
+   - **Gestión Administrativa:** Herramientas para administradores que permiten la gestión de usuarios, grupos y permisos.
+   - **Notificaciones y Alertas:** Sistema de notificaciones en tiempo real para mantener a los usuarios informados sobre eventos importantes.
+
+3. **Tecnología Utilizada**
+   - **Frameworks y Librerías:** Uso de frameworks modernos para el desarrollo web (React, Angular, o Vue.js para el frontend; Node.js o Django para el backend).
+   - **Base de Datos:** Sistemas de gestión de bases de datos relacionales y no relacionales para manejar eficientemente grandes volúmenes de información.
+   - **API:** Desarrollo de APIs RESTful para integrar diferentes servicios y funcionalidades.
 
 [Regresar al índice](../../README.md)
