Added new UseCAses for integracion modulo

--- a/Partes del Indice/1. Caso de Negocio/1.4 Listado de Stakeholders.md
+++ b/Partes del Indice/1. Caso de Negocio/1.4 Listado de Stakeholders.md
@@ -13,7 +13,8 @@
 - Responsable de mantenimento: Soporte de TI
 - Administrador de Línea de producto: Departamento de Innovacion
 - Jefe de proyecto: Director de proyecto
+- Representante de Sistema Externo: Administrador de la universidad
 - Responsable de pruebas: Evaluador de producto y QA
--  Usuarios finales: Estudiantes, profesores y jefes de practica.
+- Usuarios finales: Estudiantes, profesores y jefes de practica.
 
 [Regresar al índice](../../README.md)
