--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -4,7 +4,7 @@
 
 ![UC1-Register1](/PNGs/Prototipos/Caso_1_Register_Page_1.png) ![UC1-Register2](/PNGs/Prototipos/Caso_1_Register_Page_2.png) ![UC1-Login](/PNGs/Prototipos/Caso_1_Log_in_Page.png)
 
-**Descripcion:** La aplicación debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
+**Descripción:** La aplicación debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
 **Actores:** Sistema y usuario  
 **Precondiciones:** - Una cuenta de usuario previamente registrada  
 **Postcondiciones:** Se registra e inicia sesión de un usuario dentro del sistema.  
@@ -14,9 +14,9 @@
 
 ![UC2-Perfil](/PNGs/Prototipos/Caso_2_Perfil_Page.png)
 
-**Descripcion:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
+**Descripción:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
 **Actores:** Sistema y usuario.  
-**Precondiciones:** - Una cuenta de usuario previamente registrada. / Haber accedido a la aplicacion.
+**Precondiciones:** - Una cuenta de usuario previamente registrada. / Haber accedido a la Aplicación.
 **Postcondiciones:** Mostrar datos del usuario con la sesión iniciada.  
 **Activador:** Un usuario decide ingresar a su perfil.
 
@@ -24,74 +24,116 @@
 
 ![UC3-Message](/PNGs/Prototipos/Caso_3_Message_Page.png)
 
-**Descripcion:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
+**Descripción:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet  
 **Postcondiciones:** Envio de un mensaje directo al chat del otro usuario.  
 **Activador:** Un usuario quiere enviar un mensaje directo.
 
 ### **UC4-Mensajería de grupo:**
 
-**Descripcion:** Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.  
+**Descripción:** Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet. / Pertenecer a un curso.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Pertenecer a un curso.  
 **Postcondiciones:** Los grupos de chat son creados y se realizan envio de mensajes.  
 **Activador:** Un usuario desea crear y enviar mensajes a un chat grupal.
 
 ### **UC5-Gestión de cursos:**
 
-**Descripcion:** Los profesores podrán crear y gestionar cursos, agregar alumnos y personal administrativo, compartir materiales, etc.  
+**Descripción:** Los profesores podrán crear y gestionar cursos, agregar alumnos y personal administrativo, compartir materiales, etc.  
 **Actores:** Sistema y profesores.  
-**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet. / Iniciar sesion como profesor.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Iniciar sesión como profesor.  
 **Postcondiciones:** El curso es creado y queda disponible para que los alumnos se inscriban.  
 **Activador:** El profesor decide crear o gestionar un curso.
 
 ### **UC6-Anuncios y notificaciones:**
 
-**Descripcion:** Los profesores y el personal administrativo podrán enviar anuncios y notificaciones importantes a los grupos de estudiantes o a toda la institución.  
+**Descripción:** Los profesores y el personal administrativo podrán enviar anuncios y notificaciones importantes a los grupos de estudiantes o a toda la institución.  
 **Actores:** Sistema, profesores y personal administrativo.  
-**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet. / Iniciar sesion como profesor o personal administrativo.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Iniciar sesión como profesor o personal administrativo.  
 **Postcondiciones:** Los anuncios y notificaciones son enviados y recibidos por los estudiantes.  
 **Activador:** El profesor o personal administrativo decide enviar un anuncio o notificación.
 
 ### **UC7-Calendario académico:**
 
-**Descripcion:** La aplicación debe incluir un calendario académico donde se muestren eventos importantes, fechas límite, horarios de clase, etc.  
+**Descripción:** La aplicación debe incluir un calendario académico donde se muestren eventos importantes, fechas límite, horarios de clase, etc.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet.  
 **Postcondiciones:** El calendario académico se actualiza y está visible para todos los usuarios.  
 **Activador:** Un usuario decide agregar o consultar un evento en el calendario académico.
 
 ### **UC8-Compartir archivos:**
 
-**Descripcion:** Todos los usuarios podrán compartir archivos multimedia, documentos, presentaciones, etc., dentro de los chats individuales o de grupo.  
+**Descripción:** Todos los usuarios podrán compartir archivos multimedia, documentos, presentaciones, etc., dentro de los chats individuales o de grupo.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet.  
 **Postcondiciones:** Los archivos compartidos están disponibles para todos los participantes del chat.  
 **Activador:** Un usuario decide compartir un archivo dentro de un chat individual o de grupo.
 
 ### **UC9-Búsqueda de usuarios y cursos:**
 
-**Descripcion:** Los usuarios podrán buscar y encontrar a otros usuarios o cursos específicos dentro de la aplicación.  
+**Descripción:** Los usuarios podrán buscar y encontrar a otros usuarios o cursos específicos dentro de la aplicación.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet.  
 **Postcondiciones:** Los usuarios pueden ver los resultados de búsqueda y acceder a los perfiles de usuarios o detalles de cursos.
 **Activador:** Un usuario decide buscar a otro usuario o un curso.
 
 ### **UC10-Integración con sistemas académicos:**
 
-**Descripcion:** La aplicación puede integrarse con los sistemas académicos de la institución para acceder a información de calificaciones, horarios, etc.  
+**Descripción:** La aplicación puede integrarse con los sistemas académicos de la institución para acceder a información de calificaciones, horarios, etc.  
 **Actores:** Sistema y usuarios.
-**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet. / Integracion configurada con los sistemas externos.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Integracion configurada con los sistemas externos.  
 **Postcondiciones:** Los usuarios pueden acceder a información académica actualizada dentro de la aplicación. / Los datos de los sistemas son sincronizados.
 **Activador:** Un usuario decide consultar información académica (calificaciones, horarios, etc.) a través de la aplicación.
 
-### **UC11-Notificaciones push:**
+## Módulo de Integraciones de terceros 
 
-**Descripcion:** Los usuarios recibirán notificaciones push en tiempo real sobre nuevos mensajes, anuncios, eventos, etc.  
+### **UCX-Integración con Plataformas LMS:**
+
+**Descripción:** La aplicación puede integrarse con sistemas de gestión educativa que utilice la universidad para visualizar cursos o anuncios de este.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la aplicacion. / Tener acceso a internet.  
-**Postcondiciones:** Los usuarios reciben notificaciones push en tiempo real.  
-**Activador:** Se produce un evento importante en tiempo real dentro de la aplicacion.
+**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Integracion realizada con el sistema externo.  
+**Postcondiciones:** Los usuarios pueden acceder a los contenidos del LMS / Los datos del LMS se sincronizan correctamente.  
+**Activador:** Un usuario decide consultar contenidos educativos del LMS.
+
+### **UCX-Integración con Google Calendar:**
+
+**Descripción:** La aplicación se integra con Google Calendar para sincronizar eventos del usuario.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Vincular cuenta de Google con la aplicación.  
+**Postcondiciones:** Los usuarios podran visualizar los eventos y horarios de Google Calendar dentro de la aplicación.  
+**Activador:** Un usuario decide agregar o consultar un evento en el calendario académico.
+
+### **UCX-Integración con Herramientas de Videoconferencia:**
+
+**Descripción:** La aplicación se integra con las herramientas de videoconferencia que utilize la universidad para facilitar las reuniones.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Integracion con la herramienta de videoconferencia.  
+**Postcondiciones:** Los usuarios pueden iniciar y unirse a reuniones desde la Aplicación.  
+**Activador:** Un usuario decide iniciar o unirse a una reunión o desde la aplicación.
+
+### **UCX-Integración con Servicios de Almacenaje en la Nube:**
+
+**Descripción:** La aplicación se integra con servicios de almacenaiento en la nube para acceder y compartir archivos dentro de la aplicación.  
+**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Integracion configurada con los servicios.  
+**Postcondiciones:** Los usuarios pueden acceder y compartir archivos de la nube mediante la Aplicación.  
+**Activador:** Un usuario quiere enviar un archivo a algún chat.
+
+### **UCX-Integración con Servicios de la Universidad:**
+
+**Descripción:** La aplicación se integra con los servicios propios que brinda la misma universidad, tales como calificaciones, anuncios de la propia universidad.  
+**Actores:** Sistema, usuarios y representante del sistema externo.  
+**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Integracion con los servicios de la universidad.  
+**Postcondiciones:** Los usuarios pueden consultar los servicios de la universidad dentro de la aplicación.  
+**Activador:** Un usuario decide visualizar sus notas o avisos de la universidad dentro de la aplicación.
+
+### **UCX-Uso de Single-Sign-On(SSO):**
+
+**Descripción:** La aplicación admite el SSO con servicios externos para facilitar el acceso de los usuarios.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Configuracion exitosa del SSO.  
+**Postcondiciones:** Los usuarios pueden iniciar sesión en distintos servicios dentro de la aplicacion con un unico inicio de sesión.  
+**Activador:** Un usuario decide iniciar sesión a la aplicacion para visualizar algún servicio externo.
+
 
 [Regresar al índice](../../README.md)
