Cambios en el Business Model Canvas

--- a/Partes del Indice/1. Caso de Negocio/1.2 Modelo de Negocio.md
+++ b/Partes del Indice/1. Caso de Negocio/1.2 Modelo de Negocio.md
@@ -1,3 +1,60 @@
 ## 1.2 Modelo de Negocio
-![Business Model Canvas](/PNGs/Canvas.png)
+El modelo de negocio se basa en las siguientes características
+
+__1. Segmento de clientes__
+
+* Instituciones acádemicas: Nuestro único segmento de clientes se centra en las instituciones académicas, como universidades, colegios o institutos superiores, los cuales encontrarán una solución a sus necesidades de comunicación con esta página web.
+
+__2. Propuesta de valor__
+
+* Comunicación directa: La página web permite la comunicación directa entre profesores, alumnos y personal administrativos de la misma institución, esto por medio del sistema de cuentas que se maneja por un código que tiene asignado cada miembro de la institución.
+* Comunicación segura y directa: Cada canal de mensajería se encuentra protegido ante amenazas, además de ser exclusivo de las personas que se encuentran conversando en ese momento.
+* Grupos: Se permite la creación de grupos grandes de alumnos y profesores para mejorar la comunicación fuera de las aulas.
+* Recordatorios: Permite la creación de recordatorios para la asignación de tareas o eventos.
+* Llamadas: Permite las llamadas tanto individuales como grupales para una comunicación más directa.
+* Búsqueda de mensajes: Permite la búsqueda de texto para facilitar el encuentro de mensajes.
+
+__3. Canales__
+
+* Página web propia: Se puede acceder al servicio de chat directamente con la URL de la página web.
+* Microsoft Store (UWP): Se planifica a futuro la existencia de una versión UWP de la página web para que los usuarios cuenten con ella directamente sin la necesidad de acceder al navegador.
+
+__4. Relaciones con los clientes__
+
+* Soporte por correo: Se ofrecera coordinación de requerimientos o soporte con las instituciones afiliadas.
+* Uso de redes sociales: Los estudiantes podrán acceder a novedades de la plataforma desde Instagram, X y LinkedIn.
+
+__5. Fuentes de ingresos__
+
+* Venta de licencias a instituciones educativas: El principal ingreso de la plataforma será a través de la venta de la licencia de uso a las instituciones académicas que deseen contar con nuestro servicio.
+* Soporte extendido: En caso de requerir mayor apoyo o necesidades específicas las cuales no se encuentren contempladas inicialmente, se ofrecerá el soporte extendido de la página por un coste adicional.
+* Publicidad: En caso de permitirlo la institución, se tendrán paneles con publicidad dentro del servicio de chat.
+
+__6. Recursos clave__
+
+* Contrato con instituciones: Resulta fundamental para el funcionamiento de la página el lograr contratos con instituciones académicas, las cuales son nuestro principal fuente de ingresos.
+* Equipos para darle continuidad de funcionamiento: Se requieren de equipos para que el personal logre el continuo funcionamiento de la página web.
+* Programadores y personal de soporte: Se requiere de personal que añadan nuevas funcionalidades y den soporte a las versiones existentes de la página web.
+
+__7. Actividades clave__
+
+* Mantenimiento de la página web: Se requiere que la página siempre esté disponible para su uso.
+* Soporte a las instituciones: Resulta importante que siempre halla personal disponible para atender los requerimientos de las instituciones afiliadas.
+* Mejora y solución de fallos: Debe haber personal encargado de mejorar y dar solución a los problemas que irán apareciendo a los usuarios.
+* Promoción de la app en eventos corporativos: Debemos contar con personal encargado al marketing de la página web en eventos publicitarios.
+
+__8. Socios Clave__
+
+* Empresas con capacidad de alojar servidores: Debemos tener fuertes relaciones con empresas que puedan alojar los servicios del servidor para economizar en gastos y mejorar la escalabilidad.
+* Promotores para realizar el marketing: Personal de marketing resulta clave para hacer más atractiva nuestra oferta ante las instituciones.
+* Empresas financieras que nos permitan el crecimiento: Bancos y cajas municipales resultan vitales para tener un primer dinero inicial para iniciar operaciones.
+
+__9. Estructura de costos__
+
+* Mantenimiento de la página web: El gasto en el personal de mantenimiento debe estar garantizado para evitar contratiempos con la página web.
+* Costeo de servidores: Se debe tener considerado el gasto mensual del servidor para los presupuestos.
+* Personal de soporte 24/7: Se debe considerar el salario del personal, especialmente del equipo de soporte el cual es nuestro principal gancho ante la competencia.
+
+![Business Model Canvas](/PNGs/Canva3.png)
+
 [Regresar al índice](../../README.md)
