--- a/Partes del Indice/1. Caso de Negocio/1.3 Estructura de Equipo.md
+++ b/Partes del Indice/1. Caso de Negocio/1.3 Estructura de Equipo.md
@@ -7,7 +7,7 @@ En esta sección se presentará el organigrama del la startup y se describirán 
 - Técnico de Despligue: Profesional encargado de de la instalación, configuración y puesta en marcha de sistemas informáticos, redes y otros componentes tecnológicos. Su principal función es garantizar que los sitemas funcionen correctamente y cumplan con los requisitos establecidos.
 - Aseguramiento de Calidad (QA): Profesional responsable de garantizar la calidad del software en todas las etapas del proceso de desarrollo, desde la definición de requisitos hasta la entrega final y el mantenimiento. Su objetivo principal es prevenir errores y defectos en el producto, asegurando que cumpla con los estándares de calidad establecidos.
 - Analistas:  Profesional que se dedica a analizar e interpretar información para obtener conocimiento y resolver problemas. Su trabajo involucra la recopilación, organización, limpieza y análisis de datos de diversas fuentes, utilizando herramientas y métodos estadísticos, matemáticos y de visualización.
-- Diseñador General: Profesional encargado de gestionar la línea gráfica de la página web, abarcando desde la identidad visual de la misma, las interfaces que esta contendrá, la forma en cómo están desplegadas y las demás cualidades que estén relacionadas a este software.
+- Diseñador General: Es el encargado del diseño del software como aterrizaje de la arquitectura, de aplicar la arquitectura para cumplir los requerimientos de los módulos o partes a su cargo. Es su trabajo resolver problemas de contención de recursos y establecer presupuestos de consumo de estos. Debe entender cómo sus componentes a cargo interactúan y se comunican con otros.
 - Director de Proyecto: Es el líder responsable de la planificación, ejecución y control de un proyecto para alcanzar sus objetivos de manera eficiente y dentro del presupuesto y el cronograma establecidos.
 - Evaluador:  Es el profesional encargado de evaluar y valorar diferentes aspectos, como programas, proyectos o sistemas. Su objetivo es proporcionar información precisa e imparcial para ayudar a tomar decisiones informadas y mejorar el desempeño en el área evaluada.
 - Integradores:  Profesional altamente calificado que se especializa en integrar diferentes sistemas, componentes o tecnologías para crear una solución completa y funcional. Su objetivo principal es eliminar las barreras entre sistemas dispares y garantizar que todos los componentes funcionen juntos de manera fluida y eficiente.
