--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -6,7 +6,7 @@
 
 **Descripcion:** La aplicación debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
 **Actores:** Sistema y usuario  
-**Precondiciones:** - Una cuenta de usuario previamente registrada  
+**Precondiciones:** Una cuenta de usuario previamente registrada  
 **Postcondiciones:** Se registra e inicia sesión de un usuario dentro del sistema.  
 **Activador:** Un usuario decide registrarse en la aplicación.
 
