--- a/Partes del Indice/1. Caso de Negocio/1.4 Listado de Stakeholders.md
+++ b/Partes del Indice/1. Caso de Negocio/1.4 Listado de Stakeholders.md
@@ -13,7 +13,7 @@
 - Responsable de mantenimento: Se encargan de arreglar fallos y proveer mejoras al sistema a a lo largo de su ciclo de vida. De este rol se va a encargar el soporte de TI.
 - Administrador de Línea de producto: Encargados del mantenimiento y monitoreo del hardware y software en la red. Puede incluir configuración, mantenimienyo y monitoreo de los elementos de red. De este rol se van a encagar el departamento de innovación.
 - Jefe de proyecto: Encargado de la planificación, programación y asignación de recursos para desarrollar los componentes y liberarlos para pruebas de integración. De este rol se va encargar el director de proyecto.
-- Responsable de pruebas: s el responsable del manejo de un sistema con el que debermos interactuar. Para este rol se encargará el evaluador de producto y QA.
+- Responsable de pruebas: Es el responsable del manejo de un sistema con el que debermos interactuar. Para este rol se encargará el evaluador de producto y QA.
 -  Usuarios finales: Son los usuarios finales que usarán el sistema. En este caso, serán los estudiantes, profesores, jefes de practica y personal administrativo.
 
 [Regresar al índice](../../README.md)
