división del 2.1 en módulos + movida de partes de Sergio

--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -20,24 +20,6 @@
 **Postcondiciones:** Mostrar datos del usuario con la sesión iniciada.  
 **Activador:** Un usuario decide ingresar a su perfil.
 
-### **UC3-Mensajería one-to-one:**
-
-![UC3-Message](/PNGs/Prototipos/Caso_3_Message_Page.png)
-
-**Descripción:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
-**Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet  
-**Postcondiciones:** Envio de un mensaje directo al chat del otro usuario.  
-**Activador:** Un usuario quiere enviar un mensaje directo.
-
-### **UC4-Mensajería de grupo:**
-
-**Descripción:** Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.  
-**Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Pertenecer a un curso.  
-**Postcondiciones:** Los grupos de chat son creados y se realizan envio de mensajes.  
-**Activador:** Un usuario desea crear y enviar mensajes a un chat grupal.
-
 ### **UC5-Gestión de cursos:**
 
 **Descripción:** Los profesores podrán crear y gestionar cursos, agregar alumnos y personal administrativo, compartir materiales, etc.  
@@ -46,14 +28,6 @@
 **Postcondiciones:** El curso es creado y queda disponible para que los alumnos se inscriban.  
 **Activador:** El profesor decide crear o gestionar un curso.
 
-### **UC6-Anuncios y notificaciones:**
-
-**Descripción:** Los profesores y el personal administrativo podrán enviar anuncios y notificaciones importantes a los grupos de estudiantes o a toda la institución.  
-**Actores:** Sistema, profesores y personal administrativo.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Iniciar sesión como profesor o personal administrativo.  
-**Postcondiciones:** Los anuncios y notificaciones son enviados y recibidos por los estudiantes.  
-**Activador:** El profesor o personal administrativo decide enviar un anuncio o notificación.
-
 ### **UC7-Calendario académico:**
 
 **Descripción:** La aplicación debe incluir un calendario académico donde se muestren eventos importantes, fechas límite, horarios de clase, etc.  
@@ -61,14 +35,6 @@
 **Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet.  
 **Postcondiciones:** El calendario académico se actualiza y está visible para todos los usuarios.  
 **Activador:** Un usuario decide agregar o consultar un evento en el calendario académico.
-
-### **UC8-Compartir archivos:**
-
-**Descripción:** Todos los usuarios podrán compartir archivos multimedia, documentos, presentaciones, etc., dentro de los chats individuales o de grupo.  
-**Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet.  
-**Postcondiciones:** Los archivos compartidos están disponibles para todos los participantes del chat.  
-**Activador:** Un usuario decide compartir un archivo dentro de un chat individual o de grupo.
 
 ### **UC9-Búsqueda de usuarios y cursos:**
 
@@ -86,7 +52,75 @@
 **Postcondiciones:** Los usuarios pueden acceder a información académica actualizada dentro de la aplicación. / Los datos de los sistemas son sincronizados.
 **Activador:** Un usuario decide consultar información académica (calificaciones, horarios, etc.) a través de la aplicación.
 
-## Módulo de Integraciones de terceros 
+## Módulo de Comunicación
+
+### **UC1-Mensajería one-to-one:**
+
+![UC3-Message](/PNGs/Prototipos/Caso_3_Message_Page.png)
+
+**Descripción:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet  
+**Postcondiciones:** Envio de un mensaje directo al chat del otro usuario.  
+**Activador:** Un usuario quiere enviar un mensaje directo.
+
+### **UC2-Mensajería de grupo:**
+
+**Descripción:** Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Pertenecer a un curso.  
+**Postcondiciones:** Los grupos de chat son creados y se realizan envio de mensajes.  
+**Activador:** Un usuario desea crear y enviar mensajes a un chat grupal.
+
+### **UC3-Anuncios y notificaciones:**
+
+**Descripción:** Los profesores y el personal administrativo podrán enviar anuncios y notificaciones importantes a los grupos de estudiantes o a toda la institución.  
+**Actores:** Sistema, profesores y personal administrativo.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Iniciar sesión como profesor o personal administrativo.  
+**Postcondiciones:** Los anuncios y notificaciones son enviados y recibidos por los estudiantes.  
+**Activador:** El profesor o personal administrativo decide enviar un anuncio o notificación.
+
+### **UC4-Compartir archivos:**
+
+**Descripción:** Todos los usuarios podrán compartir archivos multimedia, documentos, presentaciones, etc., dentro de los chats individuales o de grupo.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet.  
+**Postcondiciones:** Los archivos compartidos están disponibles para todos los participantes del chat.  
+**Activador:** Un usuario decide compartir un archivo dentro de un chat individual o de grupo.
+
+### **UC5-:**
+**Descripción:** 
+**Actores:** 
+**Precondiciones:** 
+**Postcondiciones:** 
+**Activador:** 
+
+### **UC6-:**
+**Descripción:** 
+**Actores:** 
+**Precondiciones:** 
+**Postcondiciones:** 
+**Activador:** 
+
+## Módulo de Gestión de Usuarios
+
+### **UC1-:**
+**Descripción:** 
+**Actores:** 
+**Precondiciones:** 
+**Postcondiciones:** 
+**Activador:** 
+
+## Módulo de Administración y Moderación 
+
+### **UC1-:**
+**Descripción:** 
+**Actores:** 
+**Precondiciones:** 
+**Postcondiciones:** 
+**Activador:** 
+
+## Módulo de Integraciones de Terceros 
 
 ### **UCX-Integración con Plataformas LMS:**
 
