--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -1,56 +1,4 @@
-## Requerimientos Funcionales:
-
-### **UC1-Registro e inicio de sesión con roles definidos:**
-
-![UC1-Register1](/PNGs/Prototipos/Caso_1_Register_Page_1.png) ![UC1-Register2](/PNGs/Prototipos/Caso_1_Register_Page_2.png) ![UC1-Login](/PNGs/Prototipos/Caso_1_Log_in_Page.png)
-
-**Descripción:** La aplicación debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
-**Actores:** Sistema y usuario  
-**Precondiciones:** Una cuenta de usuario previamente registrada  
-**Postcondiciones:** Se registra e inicia sesión de un usuario dentro del sistema.  
-**Activador:** Un usuario decide registrarse en la aplicación.
-
-### **UC2-Perfiles de usuario:**
-
-![UC2-Perfil](/PNGs/Prototipos/Caso_2_Perfil_Page.png)
-
-**Descripción:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
-**Actores:** Sistema y usuario.  
-**Precondiciones:** - Una cuenta de usuario previamente registrada. / Haber accedido a la Aplicación.
-**Postcondiciones:** Mostrar datos del usuario con la sesión iniciada.  
-**Activador:** Un usuario decide ingresar a su perfil.
-
-### **UC5-Gestión de cursos:**
-
-**Descripción:** Los profesores podrán crear y gestionar cursos, agregar alumnos y personal administrativo, compartir materiales, etc.  
-**Actores:** Sistema y profesores.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Iniciar sesión como profesor.  
-**Postcondiciones:** El curso es creado y queda disponible para que los alumnos se inscriban.  
-**Activador:** El profesor decide crear o gestionar un curso.
-
-### **UC7-Calendario académico:**
-
-**Descripción:** La aplicación debe incluir un calendario académico donde se muestren eventos importantes, fechas límite, horarios de clase, etc.  
-**Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet.  
-**Postcondiciones:** El calendario académico se actualiza y está visible para todos los usuarios.  
-**Activador:** Un usuario decide agregar o consultar un evento en el calendario académico.
-
-### **UC9-Búsqueda de usuarios y cursos:**
-
-**Descripción:** Los usuarios podrán buscar y encontrar a otros usuarios o cursos específicos dentro de la aplicación.  
-**Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet.  
-**Postcondiciones:** Los usuarios pueden ver los resultados de búsqueda y acceder a los perfiles de usuarios o detalles de cursos.
-**Activador:** Un usuario decide buscar a otro usuario o un curso.
-
-### **UC10-Integración con sistemas académicos:**
-
-**Descripción:** La aplicación puede integrarse con los sistemas académicos de la institución para acceder a información de calificaciones, horarios, etc.  
-**Actores:** Sistema y usuarios.
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Integracion configurada con los sistemas externos.  
-**Postcondiciones:** Los usuarios pueden acceder a información académica actualizada dentro de la aplicación. / Los datos de los sistemas son sincronizados.
-**Activador:** Un usuario decide consultar información académica (calificaciones, horarios, etc.) a través de la aplicación.
+# Requerimientos Funcionales:
 
 ## Módulo de Comunicación
 
@@ -60,7 +8,7 @@
 
 **Descripción:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet  
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet  
 **Postcondiciones:** Envio de un mensaje directo al chat del otro usuario.  
 **Activador:** Un usuario quiere enviar un mensaje directo.
 
@@ -68,7 +16,7 @@
 
 **Descripción:** Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Pertenecer a un curso.  
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Pertenecer a un curso.  
 **Postcondiciones:** Los grupos de chat son creados y se realizan envio de mensajes.  
 **Activador:** Un usuario desea crear y enviar mensajes a un chat grupal.
 
@@ -76,7 +24,7 @@
 
 **Descripción:** Los profesores y el personal administrativo podrán enviar anuncios y notificaciones importantes a los grupos de estudiantes o a toda la institución.  
 **Actores:** Sistema, profesores y personal administrativo.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet. / Iniciar sesión como profesor o personal administrativo.  
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Iniciar sesión como profesor o personal administrativo.  
 **Postcondiciones:** Los anuncios y notificaciones son enviados y recibidos por los estudiantes.  
 **Activador:** El profesor o personal administrativo decide enviar un anuncio o notificación.
 
@@ -84,25 +32,60 @@
 
 **Descripción:** Todos los usuarios podrán compartir archivos multimedia, documentos, presentaciones, etc., dentro de los chats individuales o de grupo.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación. / Tener acceso a internet.  
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet.  
 **Postcondiciones:** Los archivos compartidos están disponibles para todos los participantes del chat.  
 **Activador:** Un usuario decide compartir un archivo dentro de un chat individual o de grupo.
 
-### **UC5-:**
-**Descripción:** 
-**Actores:** 
-**Precondiciones:** 
-**Postcondiciones:** 
-**Activador:** 
+### **UC5-Borrado de mensajes:**
+**Descripción:** Todos los usuarios podrán eliminar los mensajes posterior a su envío, pero no después de pasadas 24 horas de su envío, esto dentro de los chats individuales o de grupo.
+**Actores:** Sistema y usuarios.
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Haber enviado un mensaje.
+**Postcondiciones:** El mensaje seleccionado debe de haberse borrado del historial de mensajes.
+**Activador:**  Un usuario decido eliminar un mensaje dentro de un chat individual o grupal.
 
-### **UC6-:**
-**Descripción:** 
-**Actores:** 
-**Precondiciones:** 
-**Postcondiciones:** 
-**Activador:** 
+### **UC6-Indicadores de Lectura:**
+**Descripción:** Todos los usuarios podrán ver el estado de su mensaje, primero si es que ha sido enviado, posterior si es que este ha sido recibido y por último, si este ha sido leido por el o los destinatarios.
+**Actores:** Sistema y usuarios.
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Haber enviado un mensaje.
+**Postcondiciones:**  El mensaje en cuestión contara con un estatus en el que se entenderá si se encuentra como enviado, recibido o leido.
+**Activador:** El usuario decide corroborar en qué estado se encuentra el mensaje una vez fue enviado.
+
+### **UC7-Búsqueda de mensajes:**
+**Descripción:** Todos los usuarios podrán buscar uno o varios mensajes que contengan una palabra clave. Por ejemplo, podrán buscar todos los mensajes que contengan la palabra "tarea".
+**Actores:** Sistema y usuarios.
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Pertenecer a un chat one-to-one o grupal. / En ese grupo debe haber al menos un mensaje.
+**Postcondiciones:**  Aparecerá un menú que indique la cantidad de mensajes que contengan la palabra o frase a buscar y podrá ir a ver cada uno de estos.
+**Activador:** El usuario decide buscar un mensaje con una palabra o frase en específico.
 
 ## Módulo de Gestión de Usuarios
+
+### **UC1-Registro e inicio de sesión con roles definidos:**
+
+![UC1-Register1](/PNGs/Prototipos/Caso_1_Register_Page_1.png) ![UC1-Register2](/PNGs/Prototipos/Caso_1_Register_Page_2.png) ![UC1-Login](/PNGs/Prototipos/Caso_1_Log_in_Page.png)
+
+**Descripción:** La página web debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
+**Actores:** Sistema y usuario  
+**Precondiciones:** Una cuenta de usuario previamente registrada  
+**Postcondiciones:** Se registra e inicia sesión de un usuario dentro del sistema.  
+**Activador:** Un usuario decide registrarse en la página web.
+
+### **UC2-Perfiles de usuario:**
+
+![UC2-Perfil](/PNGs/Prototipos/Caso_2_Perfil_Page.png)
+
+**Descripción:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
+**Actores:** Sistema y usuario.  
+**Precondiciones:** - Una cuenta de usuario previamente registrada. / Haber accedido a la página web.
+**Postcondiciones:** Mostrar datos del usuario con la sesión iniciada.  
+**Activador:** Un usuario decide ingresar a su perfil.
+
+### **UC3-Búsqueda de usuarios y cursos:**
+
+**Descripción:** Los usuarios podrán buscar y encontrar a otros usuarios o cursos específicos dentro de la página web.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet.  
+**Postcondiciones:** Los usuarios pueden ver los resultados de búsqueda y acceder a los perfiles de usuarios o detalles de cursos.
+**Activador:** Un usuario decide buscar a otro usuario o un curso.
 
 ### **UC1-:**
 **Descripción:** 
@@ -124,50 +107,65 @@
 
 ### **UCX-Integración con Plataformas LMS:**
 
-**Descripción:** La aplicación puede integrarse con sistemas de gestión educativa que utilice la universidad para visualizar cursos o anuncios de este.  
+**Descripción:** La página web puede integrarse con sistemas de gestión educativa que utilice la universidad para visualizar cursos o anuncios de este.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Integracion realizada con el sistema externo.  
+**Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Integracion realizada con el sistema externo.  
 **Postcondiciones:** Los usuarios pueden acceder a los contenidos del LMS / Los datos del LMS se sincronizan correctamente.  
 **Activador:** Un usuario decide consultar contenidos educativos del LMS.
 
 ### **UCX-Integración con Google Calendar:**
 
-**Descripción:** La aplicación se integra con Google Calendar para sincronizar eventos del usuario.  
+**Descripción:** La página web se integra con Google Calendar para sincronizar eventos del usuario.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Vincular cuenta de Google con la aplicación.  
-**Postcondiciones:** Los usuarios podran visualizar los eventos y horarios de Google Calendar dentro de la aplicación.  
+**Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Vincular cuenta de Google con la página web.  
+**Postcondiciones:** Los usuarios podran visualizar los eventos y horarios de Google Calendar dentro de la página web.  
 **Activador:** Un usuario decide agregar o consultar un evento en el calendario académico.
 
 ### **UCX-Integración con Herramientas de Videoconferencia:**
 
-**Descripción:** La aplicación se integra con las herramientas de videoconferencia que utilize la universidad para facilitar las reuniones.  
+**Descripción:** La página web se integra con las herramientas de videoconferencia que utilize la universidad para facilitar las reuniones.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Integracion con la herramienta de videoconferencia.  
-**Postcondiciones:** Los usuarios pueden iniciar y unirse a reuniones desde la Aplicación.  
-**Activador:** Un usuario decide iniciar o unirse a una reunión o desde la aplicación.
+**Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Integracion con la herramienta de videoconferencia.  
+**Postcondiciones:** Los usuarios pueden iniciar y unirse a reuniones desde la página web.  
+**Activador:** Un usuario decide iniciar o unirse a una reunión o desde la página web.
 
 ### **UCX-Integración con Servicios de Almacenaje en la Nube:**
 
-**Descripción:** La aplicación se integra con servicios de almacenaiento en la nube para acceder y compartir archivos dentro de la aplicación.  
-**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Integracion configurada con los servicios.  
-**Postcondiciones:** Los usuarios pueden acceder y compartir archivos de la nube mediante la Aplicación.  
+**Descripción:** La página web se integra con servicios de almacenaiento en la nube para acceder y compartir archivos dentro de la página web.  
+**Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Integracion configurada con los servicios.  
+**Postcondiciones:** Los usuarios pueden acceder y compartir archivos de la nube mediante la página web.  
 **Activador:** Un usuario quiere enviar un archivo a algún chat.
 
 ### **UCX-Integración con Servicios de la Universidad:**
 
-**Descripción:** La aplicación se integra con los servicios propios que brinda la misma universidad, tales como calificaciones, anuncios de la propia universidad.  
+**Descripción:** La página web se integra con los servicios propios que brinda la misma universidad, tales como calificaciones, anuncios de la propia universidad.  
 **Actores:** Sistema, usuarios y representante del sistema externo.  
-**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Integracion con los servicios de la universidad.  
-**Postcondiciones:** Los usuarios pueden consultar los servicios de la universidad dentro de la aplicación.  
-**Activador:** Un usuario decide visualizar sus notas o avisos de la universidad dentro de la aplicación.
+**Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Integracion con los servicios de la universidad.  
+**Postcondiciones:** Los usuarios pueden consultar los servicios de la universidad dentro de la página web.  
+**Activador:** Un usuario decide visualizar sus notas o avisos de la universidad dentro de la página web.
 
 ### **UCX-Uso de Single-Sign-On(SSO):**
 
-**Descripción:** La aplicación admite el SSO con servicios externos para facilitar el acceso de los usuarios.  
+**Descripción:** La página web admite el SSO con servicios externos para facilitar el acceso de los usuarios.  
 **Actores:** Sistema y usuarios.  
-**Precondiciones:** Haber accedido a la Aplicación / Tener acceso a internet / Configuracion exitosa del SSO.  
+**Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Configuracion exitosa del SSO.  
 **Postcondiciones:** Los usuarios pueden iniciar sesión en distintos servicios dentro de la aplicacion con un unico inicio de sesión.  
 **Activador:** Un usuario decide iniciar sesión a la aplicacion para visualizar algún servicio externo.
 
-
 [Regresar al índice](../../README.md)
+
+### **UCX-Gestión de cursos:**
+
+**Descripción:** Los profesores podrán crear y gestionar cursos, agregar alumnos y personal administrativo, compartir materiales, etc.  
+**Actores:** Sistema y profesores.  
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Iniciar sesión como profesor.  
+**Postcondiciones:** El curso es creado y queda disponible para que los alumnos se inscriban.  
+**Activador:** El profesor decide crear o gestionar un curso.
+
+### **UCX-Calendario académico:**
+
+**Descripción:** La página web debe incluir un calendario académico donde se muestren eventos importantes, fechas límite, horarios de clase, etc.  
+**Actores:** Sistema y usuarios.  
+**Precondiciones:** Haber accedido a la página web. / Tener acceso a internet.  
+**Postcondiciones:** El calendario académico se actualiza y está visible para todos los usuarios.  
+**Activador:** Un usuario decide agregar o consultar un evento en el calendario académico.
